<resources>
    <string name="app_name">Clinic Book</string>
    <string name="add_child_button">Add Child</string>
    <string name="child_full_name">%1$s %2$s</string>
    <string name="add_child_title">Add Child</string>
    <string name="child_girl">Girl</string>
    <string name="child_boy">Boy</string>
    <string name="add_first_name">First Name</string>
    <string name="add_last_name">Surname</string>
    <string name="error_message_adding_child">Please provide the %1$s of your child</string>
    <string name="label_first_name">Child First Name</string>
    <string name="label_surname">Child Surname</string>
    <string name="label_id_number">Child\'s ID Number</string>
    <string name="label_mother_id_number">Mother\'s ID Number</string>
    <string name="date_picker_title">%1$s\'s Date of Birth</string>
    <string name="label_birth_facility">Name of facility where child was born</string>
    <string name="label_child_address">Child\'s Residential Address</string>
    <string name="label_mother_first_name">Mother\'s First Name</string>
    <string name="label_mother_surname">Mother\'s Surname</string>
    <string name="label_child_staying_with">Who does the child live with</string>
    <string name="label_father_first_name">Father\'s First Name</string>
    <string name="label_father_surname">Father\'s Surname</string>
    <string name="label_mother_dob">Mother\'s Date of Birth</string>
    <string name="label_father_dob">Father\'s Date of Birth</string>
    <string name="birth_number">Number born (including stillbirths)</string>
    <string name="birth_alive_number">Number alive now</string>
    <string name="label_date_info_given">Date information given</string>
    <string name="label_death_reason">Reason(s) for death(s)</string>
    <string name="personal_data_child_info">Child\'s Information</string>
    <string name="label_child_stay_with">Who does the child stay with</string>
    <string name="label_mother_id">Mother\'s ID Number</string>
    <string name="personal_data_mother_info">Mother\'s Information</string>
    <string name="label_child_dob">Child\'s Date of Birth</string>
    <string name="labelButton_personal_data">Personal Data</string>
    <string name="labelButton_growth_measurements">Growth Measurements</string>
    <string name="labelButton_growth_stages">Growth Stages</string>
    <string name="labelButton_immunisations">Immunisations</string>
    <string name="labelButton_medication">Medication</string>
    <string name="labelButton_allergies">Allergies</string>
    <string name="save_button_child">Save Child Info</string>
    <string name="toast_save_successful">Successfully Saved Info</string>
    <string name="label_number_of_births">Number of birth\'s</string>
    <string name="label_number_of_alive">Number of children still alive</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_baby_twin">Is baby a twin, triplet, etc.</string>
    <string name="label_baby_disability">Any disability or defects present</string>
    <string name="label_mother_special_needs">Does the mother need additional support to care for the child</string>
    <string name="label_father_id">Father\'s ID Number</string>
    <string name="personal_data_father_info">Father\'s Information</string>
    <string name="label_age_group">Age Group: %1$d weeks</string>
    <string name="label_batch_number">Batch number: %1$s</string>
    <string name="label_vaccine_code">Vaccine Code: %1$s</string>
    <string name="label_site">Site: %1$s</string>
    <string name="label_vaccine_date">Vaccine Date: %1$s</string>
    <string name="label_add_age_group">Choose Age Group (months)</string>
    <string name="label_add_vaccine_code">Choose Vaccine Code</string>
    <string name="label_add_batch_number">Add Batch Number</string>
    <string name="add_vaccine_title">Add Vaccine</string>
    <string name="label_vaccine_date_button">Add Vaccine Date</string>
    <string name="label_vaccine_warning">Please enter %1$s</string>
    <string name="label_confirm_delete">Are you sure you want to delete?</string>
    <string name="label_delete_dialog">Delete item</string>

</resources>
