<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/personal_data_child_info"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_first_name"/>
            <EditText
                android:id="@+id/edit_text_child_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Shakeel"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_surname"/>
            <EditText
                android:id="@+id/edit_text_child_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Shakeel"/>
        </LinearLayout>

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_id_number"/>
        <EditText
            android:id="@+id/edit_text_child_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="9184759873049"/>

    <Button
        android:id="@+id/dob_child_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="25th November 2016"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_birth_facility"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edit_text_facility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="St George's Hospital"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_child_stay_with"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edit_text_child_stay_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="St George's Hospital"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_child_address"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edit_text_child_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="21 Poppy Place, Malabar, Port Elizabeth, 6025"/>

</LinearLayout>