<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/text_view_age_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_age_group"/>
            <TextView
                android:id="@+id/text_view_batch_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_batch_number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/text_view_vaccine_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_vaccine_code"/>
            <TextView
                android:id="@+id/text_view_vaccine_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_vaccine_date"/>
        </LinearLayout>
        
        <ImageView
            android:id="@+id/img_delete_vaccine"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7dp"
            android:src="@drawable/ic_delete_forever_black_24dp"
            android:tint="@color/grey_500"
            android:layout_gravity="bottom|end"
            />


    </LinearLayout>

</android.support.v7.widget.CardView>