<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:text="@string/label_add_age_group"
            android:gravity="left"/>

        <Spinner
            android:id="@+id/spinner_age_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:text="@string/label_add_vaccine_code"
            android:gravity="left"/>

        <Spinner
            android:id="@+id/spinner_vaccine_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_add_batch_number"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edit_text_batch_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/vaccine_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/text_view_vaccine_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_vaccine_warning"
        android:layout_gravity="center"
        android:visibility="invisible"/>

</LinearLayout>