<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/section_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_father_first_name"/>
                    <EditText
                        android:id="@+id/edit_text_father_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Shakeel"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_father_surname"/>
                    <EditText
                        android:id="@+id/edit_text_father_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Shakeel"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_father_dob"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/dob_father_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="25th November 2016"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_child_staying_with"/>
            <EditText
                android:id="@+id/edit_text_child_staying_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="21 Poppy Place, Malabar, Port Elizabeth, 6025"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_number"/>
                <Spinner
                    android:id="@+id/number_of_births"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_alive_number"/>
                <Spinner
                    android:id="@+id/number_of_alive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_death_reason"/>
            <EditText
                android:id="@+id/editText_reason_for_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_date_info_given"/>
            <Button
                android:id="@+id/date_info_given"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>